--- a/bower.json
+++ b/bower.json
@@ -10,11 +10,23 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "mjolnic-bootstrap-colorpicker": "2.2.0"
+    "mjolnic-bootstrap-colorpicker": "2.2.0",
+    "animate.css": "^3.4.0",
+    "font-awesome": "4.4.0",
+    "jquery-parallax": "^1.1.3",
+    "imagesloaded": "^3.1.8",
+    "jquery-sticky": "^1.0.1",
+    "jquery-smooth-scroll": "^1.5.5",
+    "wow": "^1.1.2",
+    "easy-pie-chart": "^2.1.6",
+    "waypoints": "3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "gradientsApp"
+  "moduleName": "gradientsApp",
+  "resolutions": {
+    "jquery.scrollTo": ">=2.1.0"
+  }
 }
