--- a/bower.json
+++ b/bower.json
@@ -12,14 +12,24 @@
     "angular-touch": "^1.3.0",
     "mjolnic-bootstrap-colorpicker": "2.2.0",
     "animate.css": "^3.4.0",
-    "font-awesome": "4.4.0",
-    "jquery-parallax": "^1.1.3",
+    "components-font-awesome": "4.4.0",
+    "jquery.parallax": "^1.1.3",
     "imagesloaded": "^3.1.8",
     "jquery-sticky": "^1.0.1",
     "jquery-smooth-scroll": "^1.5.5",
     "wow": "^1.1.2",
-    "easy-pie-chart": "^2.1.6",
-    "waypoints": "3.1.1"
+    "jquery.easy-pie-chart": "^2.1.6",
+    "jquery-waypoints": "3.1.1"
+  },
+  "overrides": {
+    "jquery-waypoints": {
+      "main": "lib/jquery.waypoints.min.js"
+    },
+    "jquery.easy-pie-chart": {
+      "dependencies": {
+        "jquery": ">=1.9.0"
+      }
+    }
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
