--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "jquery-smooth-scroll": "^1.5.5",
     "wow": "^1.1.2",
     "jquery.easy-pie-chart": "^2.1.6",
-    "jquery-waypoints": "3.1.1"
+    "jquery-waypoints": "3.1.1",
+	  "ng-stats": "~2.4.0"
   },
   "overrides": {
     "jquery-waypoints": {
@@ -32,7 +33,7 @@
     }
   },
   "devDependencies": {
-    "angular-mocks": "^1.3.0"
+	  "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
   "moduleName": "gradientsApp",
